cmake_minimum_required(VERSION 3.28)
project(IntroProgramming)

set(CMAKE_CXX_STANDARD 23)

add_executable(IntroProgramming main.cpp

)
add_executable(Variables
        Variables.cpp
)

add_executable(Addition
        Addition.cpp
)

add_executable(assignment
        assignment.cpp
)

add_executable(que1
        que1.cpp
)

add_executable(que2
        que2.cpp
)

add_executable(que3
        que3.cpp
)

add_executable(que4
        que4.cpp
)

add_executable(que5
        que5.cpp
)

add_executable(que6
        que6.cpp
)

add_executable(que7
        que7.cpp
)

add_executable(escapeSequences
        escapeSequences.cpp
)

add_executable(profit_assignment
        profit_assignment.cpp
)

add_executable(switching_assignment
        switching_assignment.cpp
)

add_executable(temperature
        temperature.cpp
)

add_executable(typecasting
        typecasting.cpp
)

add_executable(scalene
        scalene.cpp
)

add_executable(volume
        volume.cpp
)

add_executable(volume2
        volume2.cpp
)

add_executable(conditions
        conditions.cpp
)